--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -70,7 +70,7 @@
     font-weight: 1500;
     color: #646cff;
     background-color: #1c1f1f;
-    margin: 200px auto auto auto;
+    margin: 80px auto auto auto;
     border: #535bf2;
 }
 
@@ -162,4 +162,33 @@
 }
 .signout-btn:hover {
     background: #ff7875;
+}
+
+.chat-portal{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    width: 100%;
+    height: 50vh;
+
+    font-weight: 500;
+    color: #646cff;
+    background-color: #1c1f1f;
+
+    margin: 80px auto auto auto;
+
+    border: #535bf2;
+}
+.chat-portal .screen{
+
+    width: 100%;
+    height: 50vh;
+
+    font-weight: 500;
+    color: #646cff;
+    background-color: #1c1f1f;
+
+    margin: 80px auto auto auto;
+
+    border: #535bf2;
 }
