--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -168,8 +168,9 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    width: 100%;
-    height: 50vh;
+    align-content: first baseline;
+    width: 825px;
+    height: 60vh;
 
     font-weight: 500;
     color: #646cff;
@@ -179,16 +180,27 @@
 
     border: #535bf2;
 }
-.chat-portal .screen{
+.chat-history{
 
-    width: 100%;
-    height: 50vh;
-
+    width: 250px;
+    height: 60vh;
     font-weight: 500;
+    align-items: flex-end;
     color: #646cff;
     background-color: #1c1f1f;
 
     margin: 80px auto auto auto;
 
     border: #535bf2;
+
+}
+
+.chat-screen {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    height: 600px;
+    overflow-y: auto;
+    background: #f5f5f5;
+    padding: 10px;
 }
