--- a/frontend/src/styles/components/navbar.css
+++ b/frontend/src/styles/components/navbar.css
@@ -12,9 +12,9 @@
     align-content: center;
     padding: 20px 0px 20px 0px;
     margin: 0 0 0 0;
-    background-color: white;
     text-decoration: none;
-    border-bottom: 1px solid #fde0e0;
+    border-bottom: 1px solid grey;
+    background-color: #f5f5f5;
 }
 
 a{
